src/objects/SNI_FL_Case_Notification__c.object
<CustomObject>
    <description>Store the Case Details by using the trigger(InsertCaseNotificationTrigger) into this object in order to mark new case notification label in the family link</description>
    <fields>
        <fullName>Case_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Case Created date in the Case Object</inlineHelpText>
        <label>Case Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number from Case Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <description>case Owner of the Case Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact name from the Case Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Viewed_Authorized_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default false</description>
        <label>Is Viewed Authorized Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default false</description>
        <label>Is Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Member_Id__c</fullName>
        <description>Member Id in the SNI_FL_Members_ROI__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ROI Member Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SNI FL Case Notification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SNI FL Case Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNI FL Case Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>